<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VenuesActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent">
            <LinearLayout
                android:id="@+id/holder_rent_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="venueClick"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:background="@color/line"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rent_date"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/rent_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_rent_date"
                    android:hint="@string/hint_rent_date"
                    android:textSize="12sp"
                    android:paddingTop="4dp"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/holder_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="venueClick"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:background="@color/line"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_hour"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_hour"
                    android:hint="@string/hint_hour"
                    android:textSize="12sp"
                    android:paddingTop="4dp"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/holder_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="venueClick"
                android:orientation="vertical"
                android:background="@color/line"
                android:padding="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_duration"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_duration"
                    android:hint="@string/hint_duration"
                    android:textSize="12sp"
                    android:paddingTop="4dp"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layoutMode="clipBounds"
            android:scrollbars="vertical" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>