<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FilterVenuesActivity"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lapangbola_logo"
                android:adjustViewBounds="true"
                android:maxWidth="80dp"
                android:layout_centerInParent="true"
                android:maxHeight="100dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <Spinner
                android:id="@+id/field_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_gravity="center"
                android:gravity="center"
                android:backgroundTint="@color/underline"
                android:textAlignment="gravity"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/label_city"
                android:textSize="14sp"
                android:textColor="@color/underline"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/hint_city"
                    android:hint="@string/hint_city"
                    android:focusable="false"
                    android:textSize="16sp"
                    android:textColor="@color/textHint"
                    android:textColorHint="@color/textHint"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_search_black_24dp"
                    android:tint="@color/underline" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/underline"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_rent_date"
                android:textSize="14sp"
                android:textColor="@color/underline"
                android:layout_marginTop="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rent_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:text="@string/hint_rent_date"
                    android:hint="@string/hint_rent_date"
                    android:clickable="true"
                    android:textSize="16sp"
                    android:textColor="@color/textHint"
                    android:textColorHint="@color/textHint"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_date_range_black_24dp"
                    android:tint="@color/underline" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/underline"
                android:layout_marginTop="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_hour"
                        android:textSize="14sp"
                        android:textColor="@color/underline"/>
                    <TextView
                        android:id="@+id/hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:textColor="@color/textHint"
                        android:text="@string/hint_hour"
                        android:hint="@string/hint_hour"
                        android:clickable="true"
                        android:focusable="false"
                        android:textColorHint="@color/textHint"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    android:layout_marginRight="12dp"
                    android:tint="@color/underline"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_duration"
                        android:textSize="14sp"
                        android:textColor="@color/underline"/>
                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:textColor="@color/textHint"
                        android:text="@string/hint_duration"
                        android:hint="@string/hint_duration"
                        android:textSize="16sp"
                        android:focusable="false"
                        android:textColorHint="@color/textHint"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    android:tint="@color/underline"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_marginRight="12dp"
                    android:background="@color/underline"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/underline"/>
            </LinearLayout>
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonLogin"
                android:text="@string/hint_search"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:padding="12dp"
                android:layout_marginTop="60dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>